fix: 머지 후 실패하는 코드 수정